--- a/public/assets/css/nbfc.css
+++ b/public/assets/css/nbfc.css
@@ -2960,7 +2960,7 @@ body {
     .message-content {
         border: 1px solid #e2e2e2;
         font-size: 12px;
-        width: 270px;
+        width: 100%;
         height: auto;
     }
 }
